# paincave-21

./: .gitignore  CMakeLists.txt  README.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: main.cpp
src/gfx/: renderer.cpp  renderer.h  window.cpp  window.h
src/world/: world.cpp  world.h
